fixed Chatbox expanding collapsing bug by adjusting the calc width inside App.scss for all expanded elements

--- a/src/App.scss
+++ b/src/App.scss
@@ -35,15 +35,18 @@
 
   &.expanded-left {
     margin-left: 250px; /* When menu opens */
+    width: calc(100vw - 250px);
   }
 
   &.expanded-right {
     margin-right: 250px; /* When chatbox opens */
+    width: calc(100vw - 250px);
   }
 
   &.expanded-both {
     margin-left: 250px;
     margin-right: 250px;
+    width: calc(100vw - 500px);
   }
 }
 
